--- a/SmartTrip/src/app/tab1/tab1.page.html
+++ b/SmartTrip/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Smart Trip
+    <ion-title style="text-align: center">
+        Smart Trip
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -22,7 +22,8 @@
       <ion-row class="ion-justify-content-center">
         <ion-col class="ion-justify-content-center" size-md="6" size-lg="5" size-xs="12">
           <div style="text-align: center">
-            <h3>Sign in</h3>
+            <h3>Sign in </h3>
+
           </div>
           <div>
             <ion-item>
