--- a/SmartTrip/src/app/tab3/tab3.page.html
+++ b/SmartTrip/src/app/tab3/tab3.page.html
@@ -1,17 +1,6 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+    <div class="background2">
+        <h1 style="font-family: 'Aller Display', sans-serif; color: white; text-align: center; font-size: 40px; margin-top: 110px;">sign up with</h1>
+        <ion-input class="input_box" placeholder="email"></ion-input>
+    </div>
 </ion-content>
