--- a/SmartTrip/src/app/tab1/tab1.page.html
+++ b/SmartTrip/src/app/tab1/tab1.page.html
@@ -10,7 +10,9 @@
   </div>
 
       <div>
-        <ion-input class="input_box" style="margin-top: 283px;"  name="email" type="email" placeholder=" email" ngModel required></ion-input>
+        <ion-input class="input_box" style="margin-top: 283px;"  name="email" type="email" placeholder=" email" ngModel required>
+          <ion-icon src="assets/icon/envelope-regular.svg" name="envelope-regular" style="width: 36px; height: 22px;"></ion-icon>
+        </ion-input>
       </div>
       <div>
         <ion-input class="input_box" style="margin-top: 33px;" name="password" type="password" placeholder=" password" ngModel required>
