Password recovery-page

--- a/SmartTrip/src/global.scss
+++ b/SmartTrip/src/global.scss
@@ -63,6 +63,17 @@
   left: 0;
 }
 
+.background3{
+  background-image: url(assets/images/background2.svg);
+  background-size: cover;
+  background-position: center;
+  height: 80vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+}
+
 .input_box{
   background-color: white;
   width: 345px;
