--- a/SmartTrip/src/app/forgot-password/forgot-password.page.html
+++ b/SmartTrip/src/app/forgot-password/forgot-password.page.html
@@ -1,9 +1,26 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>forgotPassword</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
+
+  <div class="background3 ion-justify-content-center">
+    <div style="text-align: center; color: white; font-family: 'Aller Display';">
+      <p style="font-size: 40px; margin-bottom: 0px; margin-top: 72px;">password</p>
+      <p style="font-size: 40px; margin-top: 0px;margin-bottom: 89px">recovery</p>
+      <ion-header style="text-align: center; margin-top: 119px; color:white; font-family: 'Aller Bold'" >please enter your email </ion-header>
+      <div>
+        <ion-input class="input_box" style="margin-top: 45px; margin-left:38px; color: black; text-align: left"  name="email" type="email" placeholder=" email" ngModel required>
+          <ion-icon src="assets/icon/envelope-regular.svg" name="envelope-regular" style="width: 36px; height: 22px;"></ion-icon>
+        </ion-input>
+      </div>
+      <div class="button text-end ">
+        <h1 style="color: white; "></h1>
+        <ion-button style="--ion-color-primary: #0b457c;margin-left: 38px; margin-top: 372px;" (click)="goToSignInPage()" shape="round">back</ion-button>
+      </div>
+      <div class="button  ion-text-right">
+        <h1 style="color: white; "></h1>
+        <ion-button style="margin-left:224px; margin-top:308px"shape="round">send</ion-button>
+      </div>
+    </div>
+  </div>
+
 
 </ion-content>
