Password recovery-page after press send button

--- a/SmartTrip/src/app/forgot-password/forgot-password.page.html
+++ b/SmartTrip/src/app/forgot-password/forgot-password.page.html
@@ -17,7 +17,7 @@
       </div>
       <div class="button  ion-text-right">
         <h1 style="color: white; "></h1>
-        <ion-button style="margin-left:224px; margin-top:308px"shape="round">send</ion-button>
+        <ion-button style="margin-left:224px; margin-top:308px" (click)="goToPasswordSendPage()" shape="round">send</ion-button>
       </div>
     </div>
   </div>
