--- a/SmartTrip/src/app/password-recovery/password-recovery.page.html
+++ b/SmartTrip/src/app/password-recovery/password-recovery.page.html
@@ -1,9 +1,19 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>passwordRecovery</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
+  <div class="background3 ion-justify-content-center">
+    <div style="text-align: center; color: white; font-family: 'Aller Display';">
+      <p style="font-size: 40px; margin-bottom: 0px; margin-top: 72px;">password</p>
+      <p style="font-size: 40px; margin-top: 0px;margin-bottom: 89px">recovery</p>
+      <ion-header style="text-align: center; margin-top: 119px; color:white; font-family: 'Aller Bold'" >please check your email </ion-header>
+      <ion-header style="text-align: center; margin-top: 7px; color:white; font-family: 'Aller Bold'" > for password recovery </ion-header>
+    </div>
+  </div>
+
+  <div class="button text-end ">
+    <h1 style="color: white; "></h1>
+    <ion-button style="--ion-color-primary: #0b457c;margin-left: 122px; margin-top: 773px;" (click)="goToSignInPage()" shape="round">back</ion-button>
+  </div>
+
+
 
 </ion-content>
