Closes #14 -> Sign Up Page Edited

--- a/SmartTrip/src/app/tab1/tab1.page.html
+++ b/SmartTrip/src/app/tab1/tab1.page.html
@@ -24,7 +24,7 @@
 
   <div style="display: flex; margin-left:136px; margin-top:252px" >
     <ion-toggle></ion-toggle>
-    <label style="margin-left: 4px; margin-top:8px">Remember me</label>
+    <label style="margin-left: 4px; margin-top:8px; font-family: 'Aller Bold', sans-serif; color: #363636">remember me</label>
   </div>
 
     <div class="button text-end ">
