--- a/SmartTrip/src/app/sign-up/sign-up.page.html
+++ b/SmartTrip/src/app/sign-up/sign-up.page.html
@@ -1,9 +1,39 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>signUp</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
+  <form #form="ngForm">
+    <div class="background4 ion-justify-content-center">
+      <div style="text-align: center; color: white; font-family: 'Aller Display', sans-serif;">
+        <p style="font-size: 40px; margin-bottom: 0px; margin-top: 100px;">sign up</p>
+      </div>
+    </div>
+
+    <div>
+      <ion-input class="input_box" style="margin-top: 283px;"  name="username" type="text" placeholder="username" ngModel required>
+        <ion-icon src="assets/icon/username.svg" name="lock-solid" style="width: 36px; height: 22px;"></ion-icon>
+      </ion-input>
+    </div>
+    <div>
+      <ion-input class="input_box" style="margin-top: 33px;" name="email" type="email" placeholder=" example@email.com" ngModel required>
+        <ion-icon src="assets/icon/envelope-regular.svg" name="envelope-regular" style="width: 36px; height: 22px;"></ion-icon>
+      </ion-input>
+    </div>
+    <div>
+      <ion-input class="input_box" style="margin-top: 33px;" name="password" type="password" placeholder=" password" ngModel required>
+        <ion-icon src="assets/icon/lock-solid.svg" name="lock-solid" style="width: 36px; height: 22px;"></ion-icon>
+      </ion-input>
+    </div>
+  </form>
+  <div style="display: flex; margin-left:32px; margin-top:150px" >
+    <ion-toggle></ion-toggle>
+    <label style="margin-left: 20px; margin-top:-2px; font-family: 'Aller Bold', sans-serif; color: #363636">i agree to the Terms of Service <br> and Privacy Policy</label>
+  </div>
+  <div>
+    <ion-button style="--ion-color-primary: #443DB8;margin-left: 38px; margin-top: 48px;" (click)="goToSignUpWith()" shape="round">back</ion-button>
+    <ion-button style="margin-left:224px; margin-top:-79px" shape="round" (click)="goToProfileSetup()">finalize</ion-button>
+  </div>
+  <div>
+    <ion-header style="margin-top:25px; color:grey; text-align: center; font-family: 'Aller Bold', sans-serif "> already have an account? </ion-header>
+    <ion-header style="margin-top:10px; color:#443DB8; text-align: center; font-family: 'Aller Bold', sans-serif " (click)="goToSignInPage()"> log in </ion-header>
+  </div>
 
 </ion-content>
