Buttons are customized

--- a/SmartTrip/src/app/sign-up/sign-up.page.html
+++ b/SmartTrip/src/app/sign-up/sign-up.page.html
@@ -23,13 +23,13 @@
       </ion-input>
     </div>
   </form>
-  <div style="display: flex; margin-left:32px; margin-top:150px" >
+  <div style="display: flex; margin-left:60px; margin-top:150px" >
     <ion-toggle></ion-toggle>
-    <label style="margin-left: 20px; margin-top:-2px; font-family: 'Aller Bold', sans-serif; color: #363636">i agree to the Terms of Service <br> and Privacy Policy</label>
+    <label style="margin-left: 20px; margin-top:-5px; font-family: 'Aller Bold', sans-serif; color: #363636">i agree to the Terms of Service <br> and Privacy Policy</label>
   </div>
   <div>
-    <ion-button style="--ion-color-primary: #443DB8;margin-left: 38px; margin-top: 48px;" (click)="goToSignUpWith()" shape="round">back</ion-button>
-    <ion-button style="margin-left:224px; margin-top:-79px" shape="round" (click)="goToProfileSetup()">finalize</ion-button>
+    <ion-button class="first_button" style="margin-left: 38px; margin-top: 48px;" (click)="goToSignUpWith()" shape="round">back</ion-button>
+    <ion-button class="second_button" style="margin-left:224px; margin-top:-79px" shape="round" (click)="goToProfileSetup()">finalize</ion-button>
   </div>
   <div>
     <ion-header style="margin-top:25px; color:grey; text-align: center; font-family: 'Aller Bold', sans-serif "> already have an account? </ion-header>
