--- a/SmartTrip/src/app/tab1/tab1.page.html
+++ b/SmartTrip/src/app/tab1/tab1.page.html
@@ -24,17 +24,17 @@
 
   <div style="display: flex; margin-left:136px; margin-top:252px" >
     <ion-toggle></ion-toggle>
-    <label style="margin-left: 4px; margin-top:8px; font-family: 'Aller Bold', sans-serif; color: #363636">remember me</label>
+    <label style="margin-left: 10px; margin-top:1px; font-family: 'Aller Bold', sans-serif; color: #363636">remember me</label>
   </div>
 
     <div class="button text-end ">
       <h1 style="color: white; "></h1>
-      <ion-button style="--ion-color-primary: #0b457c;margin-left: 38px; margin-top: 48px;" (click)="goToOpenPage()" shape="round">back</ion-button>
+      <ion-button class="first_button" style="margin-left: 38px; margin-top: 48px;" (click)="goToOpenPage()" shape="round">back</ion-button>
     </div>
 
     <div class="button  ion-text-right">
       <h1 style="color: white; "></h1>
-      <ion-button style="margin-left:224px; margin-top:-16px" (click)="goToHomePage()"shape="round">log in</ion-button>
+      <ion-button class="second_button" style="margin-left:224px; margin-top:-16px" (click)="goToHomePage()"shape="round">log in</ion-button>
     </div>
 
 </ion-content>
