--- a/SmartTrip/src/app/tab3/tab3.page.html
+++ b/SmartTrip/src/app/tab3/tab3.page.html
@@ -27,8 +27,8 @@
     </div>
 
      <div>
-      <ion-button style="--ion-color-primary: #0b457c;margin-left: 38px; margin-top: 48px;" (click)="goToOpenPage()" shape="round">back</ion-button>
-      <ion-button style="margin-left:224px; margin-top:-79px" shape="round" (click)="goToSignUpPage()">sign up</ion-button>
+      <ion-button class="first_button" style="margin-left: 38px; margin-top: 48px;" (click)="goToOpenPage()" shape="round">back</ion-button>
+      <ion-button class="second_button" style="margin-left:224px; margin-top:-79px" shape="round" (click)="goToSignUpPage()">sign up</ion-button>
      </div>
 
 </ion-content>
