Closes #19 -> Profile setup edited

--- a/SmartTrip/src/app/forgot-password/forgot-password.page.html
+++ b/SmartTrip/src/app/forgot-password/forgot-password.page.html
@@ -1,5 +1,5 @@
 
-<ion-content>
+<ion-content scroll-y="false">
 
   <div class="background3 ion-justify-content-center">
     <div style="text-align: center; color: white; font-family: 'Aller Display';">
