--- a/SmartTrip/src/app/sign-up/sign-up.page.html
+++ b/SmartTrip/src/app/sign-up/sign-up.page.html
@@ -1,5 +1,5 @@
 
-<ion-content>
+<ion-content scroll-y="false">
   <form #form="ngForm">
     <div class="background4 ion-justify-content-center">
       <div style="text-align: center; color: white; font-family: 'Aller Display', sans-serif;">
