--- a/SmartTrip/src/app/tab1/tab1.page.html
+++ b/SmartTrip/src/app/tab1/tab1.page.html
@@ -1,6 +1,6 @@
 <!-- Sign in Screen -->
 
-<ion-content>
+<ion-content scroll-y="false">
   <form #form="ngForm">
   <div class="background1 ion-justify-content-center">
       <div style="text-align: center; color: white; font-family: 'Aller Display', sans-serif;">
