--- a/SmartTrip/src/app/password-recovery/password-recovery.page.html
+++ b/SmartTrip/src/app/password-recovery/password-recovery.page.html
@@ -1,5 +1,5 @@
 
-<ion-content>
+<ion-content scroll-y="false">
   <div class="background3 ion-justify-content-center">
     <div style="text-align: center; color: white; font-family: 'Aller Display';">
       <p style="font-size: 40px; margin-bottom: 0px; margin-top: 72px;">password</p>
