--- a/SmartTrip/src/app/tab3/tab3.page.html
+++ b/SmartTrip/src/app/tab3/tab3.page.html
@@ -1,6 +1,6 @@
 <!-- Sign up with -->
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" scroll-y="false">
   <form #form="ngForm">
     <div class="background2">
       <h1 style="font-family: 'Aller Display', sans-serif; color: white; text-align: center; font-size: 40px; margin-top: 110px;">sign up with</h1>
