Closes #26 -> Map Page

--- a/SmartTrip/src/app/profile-setup-finalize/profile-setup-finalize.page.html
+++ b/SmartTrip/src/app/profile-setup-finalize/profile-setup-finalize.page.html
@@ -14,19 +14,19 @@
   <div style="display: flex; margin-left:60px; margin-top:180px" >
     <ion-toggle style="margin-top:-114px">
     </ion-toggle>
-    <label style="margin-left: 20px; margin-top:-81px; font-family: 'Aller Bold', sans-serif; color: #66666687">allow access for camera</label>
+    <label style="margin-left: 20px; margin-top:-81px; font-family: 'Aller Bold', sans-serif; color:grey">allow access for camera</label>
   </div>
   <div style="display: flex; margin-left:60px; margin-top:180px" >
     <ion-toggle style="margin-top:-305px">
     </ion-toggle>
-    <label style="margin-left: 20px; margin-top:-214px; font-family: 'Aller Bold', sans-serif; color: #66666687">allow permission for your location</label>
+    <label style="margin-left: 20px; margin-top:-214px; font-family: 'Aller Bold', sans-serif; color:grey">allow permission for your location</label>
   </div>
   <div style="display: flex; margin-left:60px; margin-top:180px" >
     <ion-toggle style="margin-top:-498px">
     </ion-toggle>
-    <label style="margin-left: 20px; margin-top:-349px; font-family: 'Aller Bold', sans-serif; color: #66666687">show my real name in comments</label>
+    <label style="margin-left: 20px; margin-top:-349px; font-family: 'Aller Bold', sans-serif; color:grey">show my real name in comments</label>
   </div>
   <div>
-    <ion-button class="confirm_button" style="margin-left:125px; margin-top:-580px" shape="round" (click)="goToHomePage()">confirm</ion-button>
+    <ion-button class="confirm_button" style="margin-left:125px; margin-top:-520px" shape="round" (click)="goToHomePage()">confirm</ion-button>
   </div>
 </ion-content>
