--- a/SmartTrip/src/app/tab2/tab2.page.scss
+++ b/SmartTrip/src/app/tab2/tab2.page.scss
@@ -1,5 +1,35 @@
-capacitor-google-map {
-  display: inline-block;
-  width: 100%;
+#map {
+  position: absolute;
   height: 100%;
+  width: 100%;
 }
+
+.searchBar {
+  --background-color: transparent;
+  --ion-color-base: transparent !important;
+  margin-top: 30px;
+  filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
+  width: 80%;
+  margin-left: 40px;
+}
+
+.bottomMenu{
+  background-image: url("~src/assets/images/bottomMenu.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
+  width: 100%;
+  height: 8vh;
+  margin-top: 190%;
+  margin-left: 40px;
+}
+
+ion-fab-button{
+  filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
+  width: 45px;
+  height: 45px;
+  margin-top: 1%;
+  color: #43c9e6;
+
+}
+
