--- a/SmartTrip/src/app/forgot-password/forgot-password.page.html
+++ b/SmartTrip/src/app/forgot-password/forgot-password.page.html
@@ -13,11 +13,11 @@
       </div>
       <div class="button text-end ">
         <h1 style="color: white; "></h1>
-        <ion-button style="--ion-color-primary: #0b457c;margin-left: 38px; margin-top: 372px;" (click)="goToSignInPage()" shape="round">back</ion-button>
+        <ion-button class="first_button" style="margin-left: 38px; margin-top: 372px;" (click)="goToSignInPage()" shape="round">back</ion-button>
       </div>
       <div class="button  ion-text-right">
         <h1 style="color: white; "></h1>
-        <ion-button style="margin-left:224px; margin-top:308px" (click)="goToPasswordSendPage()" shape="round">send</ion-button>
+        <ion-button class="second_button" style="margin-left:224px; margin-top:308px" (click)="goToPasswordSendPage()" shape="round">send</ion-button>
       </div>
     </div>
   </div>
