Closes #33 -> Fixed Profile Picture

--- a/SmartTrip/src/app/profile-setup/profile-setup.page.html
+++ b/SmartTrip/src/app/profile-setup/profile-setup.page.html
@@ -7,26 +7,33 @@
     </div>
   </div>
   <div>
-    <ion-input class="circle"></ion-input>
-    <ion-header style="margin-top:10px;margin-left: 3px; color:white; text-align: center; font-family: 'Aller Bold', sans-serif ;font-size: 25px;">username </ion-header>
+    <ion-avatar class="profilepicture">
+      <img src="assets/images/defaultprofilepicture.png">
+      <ion-header style="margin-top:10px;margin-left: 3px; color:white; text-align: center; font-family: 'Aller Bold', sans-serif ;font-size: 25px;">username</ion-header>
+    </ion-avatar>
   </div>
-  <div style="display: flex; margin-left:60px; margin-top:180px" >
-    <ion-toggle style="margin-top:-114px">
-    </ion-toggle>
-    <label style="margin-left: 20px; margin-top:-81px; font-family: 'Aller Bold', sans-serif; color: #66666687">allow access for camera</label>
+
+
+  <div class="othercontent">
+    <div style="display: flex; margin-left:60px; margin-top:180px" >
+      <ion-toggle style="margin-top:-114px">
+      </ion-toggle>
+      <label style="margin-left: 20px; margin-top:-81px; font-family: 'Aller Bold', sans-serif; color: gray">allow access for camera</label>
+    </div>
+    <div style="display: flex; margin-left:60px; margin-top:180px" >
+      <ion-toggle style="margin-top:-305px">
+      </ion-toggle>
+      <label style="margin-left: 20px; margin-top:-214px; font-family: 'Aller Bold', sans-serif; color: gray">allow permission for your location</label>
+    </div>
+    <div style="display: flex; margin-left:60px; margin-top:180px" >
+      <ion-toggle style="margin-top:-498px">
+      </ion-toggle>
+      <label style="margin-left: 20px; margin-top:-349px; font-family: 'Aller Bold', sans-serif; color: gray">show my real name in comments</label>
+    </div>
+    <div>
+      <ion-button class="first_button" style="margin-left: 38px; margin-top: -544px;" shape="round" (click)="goToSignUpPage()">back</ion-button>
+      <ion-button class="second_button" style="margin-left:224px; margin-top:-580px" shape="round" (click)="goToHomePage()">start</ion-button>
+    </div>
   </div>
-  <div style="display: flex; margin-left:60px; margin-top:180px" >
-    <ion-toggle style="margin-top:-305px">
-    </ion-toggle>
-    <label style="margin-left: 20px; margin-top:-214px; font-family: 'Aller Bold', sans-serif; color: #66666687">allow permission for your location</label>
-  </div>
-  <div style="display: flex; margin-left:60px; margin-top:180px" >
-    <ion-toggle style="margin-top:-498px">
-    </ion-toggle>
-    <label style="margin-left: 20px; margin-top:-349px; font-family: 'Aller Bold', sans-serif; color: #66666687">show my real name in comments</label>
-  </div>
-  <div>
-    <ion-button class="first_button" style="margin-left: 38px; margin-top: -544px;" shape="round" (click)="goToSignUpPage()">back</ion-button>
-    <ion-button class="second_button" style="margin-left:224px; margin-top:-580px" shape="round" (click)="goToHomePage()">start</ion-button>
-  </div>
+
 </ion-content>
