--- a/SmartTrip/src/app/write-review/write-review.page.html
+++ b/SmartTrip/src/app/write-review/write-review.page.html
@@ -1,5 +1,26 @@
 <ion-content scroll-y="false">
   <div class="background6 ion-justify-content-center">
+    <div style="text-align: center; color: white; font-family: 'Aller Display', sans-serif;">
+      <p style="font-size: 25px; margin-bottom: 0px; margin-top: 30px;">write a review</p>
+    </div>
+
+    <div class="rectangle">
+      <ion-button class="button button-clear" style="width: 35px; height: 32px; background-image: url(assets/icon/add-photo.svg); background-size: cover; position: absolute; bottom: 622px; left: 157px;"></ion-button>
+      <p style="font-family: 'Aller Bold', sans-serif; position: absolute; margin-top: 102px; margin-left: 116px; color: grey">add photo</p>
+    </div>
+
+    <ion-card class="commentCard">
+      <ion-item style="--border-style: none;">
+        <ion-icon src="assets/icon/comment.svg" name="comment" slot="start" style="margin-top: 16px; font-size: 26px;"></ion-icon>
+        <ion-textarea class="commentArea" placeholder="was it clean? tell us..."></ion-textarea>
+      </ion-item>
+    </ion-card>
+    <div class="toilet" style="position: fixed; margin-top: 40px;">
+      <img src="{{toilet}}" (click)="selectToilet();" style="margin-left: 10%">
+      <img src="{{disabled}}" (click)="selectDisabled();" style="margin-left: 35%">
+      <img src="{{babycare}}" (click)="selectBabycare();" style="margin-left: 55%">
+      <img src="{{mosque}}" (click)="selectMosque();" style="margin-left: 75%">
+    </div>
   </div>
 
   <div>
