--- a/SmartTrip/src/app/write-review/write-review.page.scss
+++ b/SmartTrip/src/app/write-review/write-review.page.scss
@@ -2,3 +2,35 @@ ion-button{
   margin-top: 620px;
   filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
 }
+
+.toilet{
+  img{
+    margin-top: 25px;
+    margin-left: 30px;
+    padding: 10px;
+    position: fixed;
+  }
+}
+
+.rectangle{
+  width: 320px;
+  height: 198px;
+  margin-left: 25px;
+  margin-top: 25px;
+  background-color: white;
+  border-radius: 20px;
+}
+
+.commentCard{
+  width: 320px;
+  height: 125px;
+  margin-left: 25px;
+  border-radius: 20px;
+}
+
+.commentArea{
+  --placeholder-color: black;
+  --placeholder-font-family: 'Aller Bold', sans-serif;
+  border-radius: 20px;
+  margin-top: 6px;
+}
