Closes #28 -> Facility review page components added.

--- a/SmartTrip/src/app/facility-review/facility-review.page.html
+++ b/SmartTrip/src/app/facility-review/facility-review.page.html
@@ -1,7 +1,65 @@
 
 <ion-content scroll-y="false">
+  <div>
   <div class="background6 ion-justify-content-center">
+    <div style="position: absolute; display: flex ;top: 3% ; scale: 85%; margin-left: 7px">
+      <img src="assets/images/trophy.png" >
+      </div>
+    <div style="position: absolute; display: flex ;top: 4% ; scale: 85%; margin-left: 53px">
+      <img src="assets/images/crown.png" >
+
+    </div>
+    <div style="position: absolute; display: flex ;top: 4% ; scale: 85%; margin-left: 100px">
+      <img src="assets/images/award.png" >
+    </div>
+    <div style="position: absolute; display: flex ;top: 9% ; scale: 90% ; margin-left: 8px">
+      <img src="assets/images/opet.png" >
+    </div>
+
+    <ion-header style="margin-top:38px;margin-left: 138px; color:white;font-size: 20px;">Opet Kocaman Akaryakıt </ion-header>
+    <ion-header style="margin-top:8px;margin-left: 137px; color:white;font-size: 15px;">Yayalar, 06740 Çamlıdere/Ankara </ion-header>
+
   </div>
+  <div style="position: absolute; display: flex ; top: 17% ;transform: translateY(-50%); scale: 86%">
+    <img src="assets/icon/toiletWhite.png" style="margin-left: 90% ; margin-top: 42%">
+    <img src="assets/icon/disabledWhite.png" style="margin-left: 17%; margin-top: 43%">
+    <img src="assets/icon/babycare.png" style="margin-left: 17%; margin-top: 44%">
+    <img src="assets/icon/mosqueWhite.png" style="margin-left: 12% ; margin-top:  40%">
+  </div>
+  </div>
+
+  <div class="scrollable-container" style="position: absolute; top: 46%; transform: translateY(-50%) ;overflow-y: scroll">
+    <ion-list>
+      <ion-item>
+        <h2 style="font-size: 15px">Lavaboları temiz, market bölümü gayet çeşitliydi.</h2>
+      </ion-item>
+      <ion-item>
+        <h2 style="font-size: 15px">Bu konumda yer alan Opet gerçekten çok temiz.</h2>
+      </ion-item>
+      <ion-item>
+        <h2 style="font-size: 15px">İyiydi.</h2>
+      </ion-item>
+      <ion-item>
+        <h2 style="font-size: 15px">Çalışanlar güler yüzlü ve tuvaletleri tertemiz.</h2>
+      </ion-item>
+      <ion-item>
+        <h2 style="font-size: 15px">Hizmet kalitesi artmış.</h2>
+      </ion-item>
+      <ion-item>
+        <h2 style="font-size: 15px">Genel olarak iyi.</h2>
+      </ion-item>
+      <ion-item>
+        <h2 style="font-size: 15px">Temiz.</h2>
+      </ion-item>
+      <ion-item>
+        <h2 style="font-size: 15px">Başarılı.</h2>
+      </ion-item>
+      <ion-item>
+        <h2 style="font-size: 15px">Lavaboları gerçekten çok temizdi.</h2>
+      </ion-item>
+    </ion-list>
+  </div>
+
 
   <div>
     <ion-button class="first_button" style="margin-left: 20px;" shape="round" (click)="cancel()">back</ion-button>
