--- a/SmartTrip/src/app/facility-review/facility-review.page.scss
+++ b/SmartTrip/src/app/facility-review/facility-review.page.scss
@@ -2,3 +2,20 @@ ion-button{
   margin-top: 550px;
   filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
 }
+.circle2 {
+  width: 119px;
+  height: 121px;
+  border-radius: 53%;
+  --border-width: 0;
+  border: 4px solid white;
+  margin-top: 90px;
+  margin-left: 17px;
+}
+.scrollable-container {
+  width: 320px;
+  height: 314px;
+  border-radius: 4%;
+  --border-width: 0;
+  border: 1px solid white;
+  margin-left: 26px;
+}
