--- a/SmartTrip/src/app/facility-review/facility-review.page.scss
+++ b/SmartTrip/src/app/facility-review/facility-review.page.scss
@@ -19,3 +19,30 @@ ion-button{
   border: 1px solid white;
   margin-left: 26px;
 }
+.cont {
+  width: 93%;
+  max-width: 350px;
+  text-align: center;
+  margin: 4% auto;
+  padding: 30px 0;
+  filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
+
+}
+
+div.stars {
+  width: 270px;
+  margin-left: 60px;
+  margin-top: -30px;
+}
+
+::ng-deep label.star{
+  padding: 0 5px !important;
+  font-size: 30px !important;
+  color: #ddd !important;
+  &::before{
+    content: "\f005" !important;
+  }
+}
+
+
+
