--- a/SmartTrip/src/app/write-review/write-review.page.scss
+++ b/SmartTrip/src/app/write-review/write-review.page.scss
@@ -5,7 +5,7 @@ ion-button{
 
 .toilet{
   img{
-    margin-top: 25px;
+    margin-top: -40px;
     margin-left: 30px;
     padding: 10px;
     position: fixed;
@@ -34,3 +34,20 @@ ion-button{
   border-radius: 20px;
   margin-top: 6px;
 }
+
+.cont {
+  width: 93%;
+  max-width: 350px;
+  text-align: center;
+  margin: 4% auto;
+  padding: 30px 0;
+  filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.4));
+
+}
+
+div.stars {
+  margin-right: 20%;
+  margin-top: -20px;
+}
+
+
