--- a/SmartTrip/src/app/profile-setup-finalize/profile-setup-finalize.page.scss
+++ b/SmartTrip/src/app/profile-setup-finalize/profile-setup-finalize.page.scss
@@ -13,3 +13,11 @@
   margin-top: 700px;
   position: relative;
 }
+
+.settings-button {
+  position:absolute;
+  bottom: 400px;
+  right: 100px;
+  width: 50px;
+  height: 50px;
+}
