--- a/SmartTrip/src/app/sign-up/sign-up.page.html
+++ b/SmartTrip/src/app/sign-up/sign-up.page.html
@@ -1,6 +1,6 @@
 
 <ion-content scroll-y="false">
-  <form #form="ngForm">
+  <form>
     <div class="background4 ion-justify-content-center">
       <div style="text-align: center; color: white; font-family: 'Aller Display', sans-serif;">
         <p style="font-size: 40px; margin-bottom: 0px; margin-top: 100px;">sign up</p>
@@ -8,29 +8,29 @@
     </div>
 
     <div>
-      <ion-input class="input_box" style="margin-top: 283px;"  name="username" type="text" placeholder="username" ngModel required>
+      <ion-input class="input_box" style="margin-top: 283px;"  name="username" type="text" placeholder="username" [(ngModel)] = "user.username" required>
         <ion-icon src="assets/icon/username.svg" name="lock-solid" style="width: 36px; height: 22px;"></ion-icon>
       </ion-input>
     </div>
     <div>
-      <ion-input class="input_box" style="margin-top: 33px;" name="email" type="email" placeholder=" example@email.com" ngModel required>
+      <ion-input class="input_box" style="margin-top: 33px;" name="email" type="email" placeholder=" example@email.com" [(ngModel)] = "user.email" required>
         <ion-icon src="assets/icon/envelope-regular.svg" name="envelope-regular" style="width: 36px; height: 22px;"></ion-icon>
       </ion-input>
     </div>
     <div>
-      <ion-input class="input_box" style="margin-top: 33px;" name="password" type="password" placeholder=" password" ngModel required>
+      <ion-input class="input_box" style="margin-top: 33px;" name="password" type="password" placeholder=" password" [(ngModel)] = "user.password" required>
         <ion-icon src="assets/icon/lock-solid.svg" name="lock-solid" style="width: 36px; height: 22px;"></ion-icon>
       </ion-input>
     </div>
+    <div style="display: flex; margin-left:60px; margin-top:150px" >
+      <ion-toggle></ion-toggle>
+      <label style="margin-left: 20px; margin-top:-5px; font-family: 'Aller Bold', sans-serif; color: #363636">i agree to the Terms of Service <br> and Privacy Policy</label>
+    </div>
+    <div>
+      <ion-button class="first_button" style="margin-left: 38px; margin-top: 48px;" (click)="goToSignUpWith()" shape="round">back</ion-button>
+      <ion-button class="second_button" style="margin-left:224px; margin-top:-79px" shape="round" (click)="signUp()">finalize</ion-button>
+    </div>
   </form>
-  <div style="display: flex; margin-left:60px; margin-top:150px" >
-    <ion-toggle></ion-toggle>
-    <label style="margin-left: 20px; margin-top:-5px; font-family: 'Aller Bold', sans-serif; color: #363636">i agree to the Terms of Service <br> and Privacy Policy</label>
-  </div>
-  <div>
-    <ion-button class="first_button" style="margin-left: 38px; margin-top: 48px;" (click)="goToSignUpWith()" shape="round">back</ion-button>
-    <ion-button class="second_button" style="margin-left:224px; margin-top:-79px" shape="round" (click)="goToProfileSetup()">finalize</ion-button>
-  </div>
   <div>
     <ion-header style="margin-top:25px; color:grey; text-align: center; font-family: 'Aller Bold', sans-serif "> already have an account? </ion-header>
     <ion-header style="margin-top:10px; color:#443DB8; text-align: center; font-family: 'Aller Bold', sans-serif " (click)="goToSignInPage()"> log in </ion-header>
